Fixed Spacing
The spacing between top nav bar and the jumbotron was off. Now its fixed

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 /* Styles go here */
 .jumbotron {
-    position: relative;
+    position: absolute;
     background: #000 url("http://www.heromachine.com/wp-content/uploads/2015/08/a-mc-random-28.jpg") center center;
+    margin-top:0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background-size: cover;
     overflow: hidden;
+}
+#top-nav{
+	margin:0;
 }
